<resources>
    <string name="app_name" translatable="false">Ubook</string>
    <string name="google_map_api_key" translatable="false">AIzaSyAVRS_ZQZCiHMvnGhwUNU9wo8MpvSCWr6s</string>
    //signin
    <string name="start_trying_ubook">Bắt đầu trải nghiệm cùng Ubook</string>
    <string name="your_phone_number">Số điện thoại của bạn</string>
    <string name="accept">Tôi đồng ý với </string>
    <string name="terms_and_conditions">điều kiện và điều khoản sử dụng</string>
    <string name="continues">Tiếp tục</string>
    //verify
    <string name="your_code_sent_to_phone_number">Nhập mã code đã được gửi cho bạn qua số điện thoại:</string>
    <string name="confirm">Xác nhận</string>
    <string name="code_not_send">Bạn không nhận được mã code?</string>
    <string name="resend">Gửi lại mã code</string>
    //main bottom navigation tab
    <string name="home">Trang chủ</string>
    <string name="order">Các đơn hàng</string>
    <string name="notify">Thông báo</string>
    <string name="account">Tài khoản</string>

    //tab account
    <string name="account_detail">Chi tiết tài khoản</string>
    <string name="language">Ngôn ngữ</string>
    <string name="sign_out">Đăng xuất</string>

    //tab home
    <string name="enter_your_location_you_want_arrive">Nhập địa chỉ tại đây</string>

    <!--Base-->
    <string name="loading">Đang tải...</string>
    <string name="error_internet">Kiểm tra kết nối mạng!</string>
    <!--End base-->

    <!-- Dialog message start-->
    <string name="dialog_title">Thông báo</string>
    <string name="signin_loading">Đang tải...</string>
    <string name="dialog_button_confirm_no">Không</string>
    <string name="dialog_button_confirm_yes">Có</string>
    <string name="dialog_button_close">Đóng</string>
    <!-- Dialog message end-->

    <!--SignIn-->
    <string name="phone_number_must_not_be_blank">Số điện thoại không thể bỏ trống</string>

    <string name="error_401"></string>
    <string name="error_404"></string>
</resources>
