<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_orders"
        android:enabled="true"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:title="@string/order"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_notify"
        android:enabled="true"
        android:icon="@drawable/ic_live_help_black_24dp"
        android:title="@string/notify"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_account"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/account"
        app:showAsAction="always" />
</menu>