<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="#2196F3"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/start_trying_ubook"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:background="@drawable/custom_signin_input"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:maxLines="1"
                    android:layout_margin="16dp"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                    android:hint="@string/your_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textStyle="bold"
                    android:textColor="#0664AF"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <Button
            android:id="@+id/btNext"
            android:enabled="false"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingRight="8dp"
            android:layout_alignParentBottom="true"
            android:text="@string/continues"
            android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

</RelativeLayout>