<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity">
    <LinearLayout
        android:id="@+id/llText"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:text="@string/your_code_sent_to_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvPhoneNumber"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCode"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        android:layout_below="@+id/llText"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="36sp"
            android:layout_marginLeft="8dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="36sp"
            android:layout_marginLeft="8dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="36sp"
            android:layout_marginLeft="8dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="36sp"
            android:layout_marginLeft="8dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/btSubmit"
        android:background="@drawable/custom_submit_button"
        android:text="@string/confirm"
        android:textColor="@color/gray"
        android:enabled="false"
        android:layout_below="@+id/llCode"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />
    <TextView
        android:id="@+id/tvText"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:layout_below="@+id/btSubmit"
        android:gravity="center"
        android:text="@string/code_not_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvResend"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="#000"
        android:layout_below="@+id/tvText"
        android:gravity="center"
        android:text="@string/resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>